--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,23 +1,24 @@
-
-name: 'jaffle_shop'
-version: '0.1'
-profile: 'jaffle_shop'
+name: "jaffle_shop"
+version: "0.1"
+profile: "jaffle_shop"
 config-version: 2
 
-source-paths: ["models"]
+require-dbt-version: ["1.3.1"]
+
+model-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
-data-paths: ["data"]
+seed-paths: ["data"]
 macro-paths: ["macros"]
 
 target-path: "target"
 clean-targets:
-    - "target"
-    - "dbt_modules"
-    - "logs"
+  - "target"
+  - "dbt_modules"
+  - "logs"
 
 models:
   jaffle_shop:
-      materialized: table
-      staging:
-        materialized: view
+    materialized: table
+    staging:
+      materialized: view
